fix: links should be visible

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -64,3 +64,7 @@ h2.headerTitleWithLogo {
     margin-right: auto;
     font-size: x-large;
 }
+
+a {
+    color: #BC312A;
+  }
